---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: ????
  Info:
    - Place all the entities on the map for review
    - Space them out based on their width
    - Fix arc furnace animation
    - Give each entity a cleaner localised name
    - Fix thermal plant sprite count
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2025. 03. 11
  Info:
    - Import prior work
    - List all assets and manually map them
    - Create a lua file in each asset directory
    - Put the critical information inside the lua file
    - Handle sprites subdirectory and outlying conduit case
    - Fix lua table key indicator
    - Ponder
    - Avoid manual splitting shenanigans
    - Load the game without prototype errors
    - Fix loading animations with less than 57 frames
    - Add item and free recipe
    - Load (almost) all of hurricane's sprites as assemblers
    - Fix loading machines with no icon
    - Put each assembler into their animation loop
    - Note about the intention and shadows
    - Rename animation loop
    - Support entities with no emission graphics
    - Fix multiple emission support
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 03. 11
  Info:
    - Initial commit