@@ -7,6 +7,7 @@ Date: ????
     - Fix arc furnace animation
     - Give each entity a cleaner localised name
     - Fix thermal plant sprite count
+    - Have an inactive and an active row for each entity
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.2
 Date: 2025. 03. 11
